argocd/manifests/kayleewatkins/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kayleewatkins
  labels:
    environment: prod
