argocd/manifests/kayleewatkins/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kayleewatkins
  namespace: kayleewatkins
  labels:
    app: kayleewatkins
    environment: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kayleewatkins
      environment: prod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kayleewatkins
        environment: prod
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: site-content
              mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-config
          configMap:
            name: kayleewatkins-nginx
        - name: site-content
          configMap:
            name: kayleewatkins-content
