argocd/manifests/kayleewatkins/base/ingressroute-immich-share.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kayleewatkins-immich-share
  namespace: kayleewatkins
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`kayleewatkins.com`) && PathPrefix(`/s/`) || Host(`www.kayleewatkins.com`) && PathPrefix(`/s/`)
      services:
        - kind: Service
          name: immich-server
          namespace: immich
          port: 2283
      priority: 1000
